# Space_Shooter

./: Background.cpp  Background.h  CMakeLists.txt  GameOverScreen.cpp  GameOverScreen.h  GameState.cpp  GameState.h  Obstacles.cpp  Obstacles.h  Player.cpp  Player.h  Score.cpp  Score.h  main.cpp
